Fix the blog page which is disturb on mobile view

--- a/Nixon/css/templates/_blog.css
+++ b/Nixon/css/templates/_blog.css
@@ -1076,7 +1076,7 @@ article.blog-post .topic-section {
 	z-index: 1;
 	font-weight: 700;
 	font-size: 1.125rem;
-	white-space: nowrap;
+	white-space: unset;
 }
 
 .post-page__pagination.post-ty2 nav .other a {
@@ -1300,18 +1300,4 @@ article.blog-post .topic-section {
 
 }
 
-/* Add overflow-x hidden to entire body so that they do not overflow while view in mobile*/
-@media (max-width: 480px){
-	.body-container-wrapper{
-         overflow-x: hidden;
-		 max-width: 100%;
-		 width: 100%;
-	}
-}
-@media (max-width: 768px){
-	.body-container-wrapper{
-		overflow-x: hidden;
-		max-width: 100%;
-		width: 100%;
-   }
-}
+/* Add overflow-x hidden to entire body of blog-detail page so that they do not overflow while view in mobile*/
